# legal-multi-agent-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
frontend/: .env.example  Dockerfile  README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/account/: page.tsx
frontend/app/dashboard/: page.tsx
frontend/components/: ClerkNavbarSession.tsx  ContactCard.tsx  Footer.tsx  Hero.tsx  InquiryConsole.tsx  Navbar.tsx  ProcessSection.tsx  QuickStartStrip.tsx  SectionReveal.tsx  SubscriptionSection.tsx  TagPill.tsx  UnderlineField.tsx
frontend/components/chat/: DashboardChatbot.tsx
frontend/components/dashboard/: AgentProgressRail.tsx  DashboardConsultationSection.tsx  DashboardHeader.tsx  DashboardLegalDisclaimer.tsx  DashboardMetrics.tsx  DashboardOverview.tsx  DashboardShellContext.tsx  DashboardSidebar.tsx  DashboardUserMenu.tsx  DiscoveryHub.tsx  InsightsPanel.tsx  PdfReviewPlaceholder.tsx  StatusPill.tsx  WorkspaceDashboard.tsx
frontend/components/legal-desk/: LegalDeskZyraHub.tsx
frontend/components/marketing/: FaqAccordion.tsx  FeatureShowcase.tsx  (+7 more)
frontend/lib/: api.ts  jurisdiction.ts  run-history.ts  ws-session.ts
legal_multi_agent/: __init__.py  graph.py  nodes.py  openrouter.py  settings.py  state.py
server/: __init__.py  main.py  middleware.py  security.py
tests/: conftest.py  test_graph_stream.py  test_health.py  test_openrouter_parse.py  test_query.py  test_security.py
(+2 files in other folders)
