[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legal-multi-agent-platform"
version = "0.2.0"
description = "Multi-agent legal document Q&A — LangGraph orchestration + FastAPI WebSockets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "langgraph>=0.2.0",
  "langchain-core>=0.3.0",
  "openai>=1.50.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
  "python-dotenv>=1.0.0",
  "slowapi>=0.1.9",
]

[project.optional-dependencies]
db = [
  "psycopg[binary]>=3.2.0",
  "pgvector>=0.3.0",
]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["legal_multi_agent*", "server*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
